--- a/QAthleticsWebRep/appsettings.json
+++ b/QAthleticsWebRep/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:qafplayers.database.windows.net,1433;Database=QAthleticsWebRep;User ID=Val1;Password=Val@123456;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
