--- a/QAthleticsWebRep/appsettings.json
+++ b/QAthleticsWebRep/appsettings.json
@@ -2,11 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:qafplayers.database.windows.net,1433;Database=QAthleticsWebRep;User ID=Val1;Password=Val@123456;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  }
+  "AllowedHosts": "*"
 }
